# fashion_mas

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
config/: config.yaml
config/data/: data_01.yaml
config/misc/: misc_01.yaml
config/models/: models_01.yaml
config/prompts/: prompts_01.yaml
config/rag_pipeline/: rag_pipeline_01.yaml
src/data_manager/: vector_db_reader.py  vector_db_writer.py
src/exploration/: data_exploration.py  exploration.py  langgraph_exploration.py
src/utils/: common_utils.py  model_factory.py
