[project]
name = "fashion-mas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.10",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
