[project]
name = "fashion-mas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "open-clip-torch>=3.3.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
